# riptide_gazebo

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py  sim.sdf  sim.xsd  test.sdf  world2.sdf
Assets/Plugins/TempestMove/: CMakeCache.txt  CMakeLists.txt  Makefile  TempestMovePlugin.cpp  cmake_install.cmake
Assets/Plugins/gz_sim_riptide_menu/: CMakeLists.txt  package.xml
Assets/Plugins/gz_sim_riptide_menu/src/: RiptideMenuPlugin.h
Assets/Plugins/hello_world_plugin/: CMakeLists.txt
Assets/Plugins/hello_world_plugin/src/: HelloWorld.cc
Assets/Plugins/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Assets/Plugins/install/SampleSystem/share/SampleSystem/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Assets/Plugins/install/hello_world_plugin/share/hello_world_plugin/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Assets/Plugins/install/uwrt_gz/share/uwrt_gz/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Assets/Plugins/install/uwrt_ros_gz/lib/uwrt_ros_gz/: uwrt_ros_gz_bridge
Assets/Plugins/install/uwrt_ros_gz/share/uwrt_ros_gz/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Assets/Plugins/install/uwrt_ros_gz/share/uwrt_ros_gz/cmake/: uwrt_ros_gzConfig.cmake
Assets/Plugins/log/: latest_build  latest_list
Assets/Plugins/uwrt_gui/: CMakeLists.txt  CompObjects.cc  CompObjects.hh  CompObjectsPlugin.cc  CompObjectsPlugin.hh  README.md  initgui.sh
Assets/Plugins/uwrt_gui/buildtmp/: CMakeCache.txt  CustomObjectsGui.qrc.depends  Makefile  cmake_install.cmake  qrc_CustomObjectsGui.cpp
Assets/Plugins/uwrt_gui/buildtmp/CompObjectsPlugin_autogen/: mocs_compilation.cpp
Assets/Plugins/uwrt_gui/buildtmp/CompObjectsPlugin_autogen/EWIEGA46WW/: moc_CompObjectsPlugin.cpp  moc_CompObjectsPlugin.cpp.d
Assets/Plugins/uwrt_gui/buildtmp/CustomObjectsGui_autogen/: moc_predefs.h  mocs_compilation.cpp
Assets/Plugins/uwrt_gui/buildtmp/CustomObjectsGui_autogen/EWIEGA46WW/: moc_CustomObjectsGui.cpp  moc_CustomObjectsGui.cpp.d
Assets/Plugins/uwrt_gui/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Assets/Plugins/uwrt_gui/install/CompObjectsPlugin/install/: CompObjectsPlugin.qml  CompObjectsPlugin.qrc
Assets/Plugins/uwrt_gui/install/CompObjectsPlugin/share/CompObjectsPlugin/: package.bash  package.zsh
Assets/Plugins/uwrt_gui/log/: latest_build
Assets/Plugins/uwrt_gui/template/: CompObjectsPluginTemplate.qml  CompObjectsPluginTemplate.qrc  CompObjectsTemplate.cc  CompObjectsTemplate.hh
Assets/Plugins/uwrt_gui/test/: axetest.txt  badgetest.txt  binBarreltest.txt  binPhonetest.txt  bootleggerTorpedotest.txt  bootleggertest.txt  cashtest.txt  gmanTorpedotest.txt  gmantest.txt  tempesttest.txt  tommyGuntest.txt
Assets/Plugins/uwrt_gz/: CMakeLists.txt  package.xml  world.sdf  world2.sdf
Assets/Plugins/uwrt_gz/src/: MoveEntity.cc  MoveEntity.hh  loadXacro.py
Assets/Plugins/uwrt_ros_gz/: CMakeLists.txt  package.xml
Assets/Plugins/uwrt_ros_gz/launch/: uwrt_ros_gz.launch.py
Assets/Plugins/uwrt_ros_gz/src/: bridge.cpp
config/: params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: robot_state_pub.launch.py  run.launch  sensor_remap.launch  sensor_remap.launch.py  simulator.launch  spawn_robot.launch  spawn_robot.launch.py  world.launch  world.launch.py
log/: latest_build
models/alphabet_soup/: model.config  model.sdf
models/bootlegger/: model.config  model.sdf
models/bootlegger/meshes/: bootlegger.dae  bootlegger.mtl
models/bootlegger_torpedo/: model.config  model.sdf
models/bootlegger_torpedo/meshes/: bootleggerTorpedoCutout.dae
models/buoy/: model.config  model.sdf
models/buoy/meshes/: buoy.dae
models/crucifix_tower/: model.config  model.sdf
models/crucifix_tower/meshes/: crucifix_tower.dae
models/cutie/: model.config  model.sdf
models/cutie/meshes/: cutie.dae
models/drop_garlic/: model.config  model.sdf
models/expose_to_sunlight/: model.config  model.sdf
models/garlic/: model.config  model.sdf
models/gate/: model.config  model.sdf
models/gate/meshes/: gate.dae  gate_success_zones.dae
models/gman/: model.config  model.sdf
models/gman/meshes/: gman.dae  gman.mtl
models/gman_torpedo/: model.config  model.sdf
models/gman_torpedo/meshes/: GmanTorpedoCutout.dae
models/path/: model.config  model.sdf
models/pinger/: model.config  model.sdf
models/pole/: model.config  model.sdf
models/pole/meshes/: pole.dae
models/slay_vampires/: model.config
models/stake_through_heart/: model.config  model.sdf
models/transdec/: model.config  model.sdf
models/transdec/meshes/: transdec.dae
models/transdec_bridge/: model.config  model.sdf
models/transdec_bridge/meshes/: transdec_bridge.dae
models/water_surface/: model.config  model.sdf
models/water_surface/meshes/: water_surface.dae
msg/: Float32MultiArray.msg  Imu.msg  Twist.msg
riptide_gazebo2/: depth_remap.py  imu_remap.py  kill_switch_publisher.py  thrust_remap.py
scripts/: automate_runs.py  automation_handler.py  command_center.py  depth_remap.py  generateRuns.py  generateWorlds.py  imu_remap.py  kill_switch_publisher.py  params.json  props_template.xml  run_config.xml  run_config2.xml  run_config_blank.xml  thrust_remap.py
ui/: command_center.py
worlds/: 2019_finals.world  cutie.world  gate.world  generateRuns.py  generateWorlds.py  lake.world  models_template.xml  notes  prequal.world  props_template.xml  run0.world  run1.world  run10.world  run11.world  run12.world  run13.world  run14.world  run2.world  run3.world  run4.world  run5.world  run6.world  run7.world  run8.world  run9.world  run_config.xml  run_config2.xml  run_template.xml  torpedo.world
