<?xml version="1.0"?>
<package format="2">
  <name>riptide_gazebo</name>
  <version>0.0.1</version>
  <description>Worlds, models, and code to interface with the robot simulator gazebo</description>

  <maintainer email="osu.uwrt@gmail.com">OSU UWRT</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/riptide_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>riptide_msgs</depend>
  <depend>rospy</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
